# pytest-assay

./: .codecov.yaml  .coderabbit.yaml  .cursorignore  .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  README.md  settings.json  settings.local.json
.claude/plans/: custom_evaluators.plan.md  extensible_evaluators.plan.md  logging_bestpractice.md  remove_generator.plan.md  wiggly-swinging-book.md
.claude/rules/: general.md  python-testing.md  python.md
.cursor/: README.md  mcp.json.example  settings.json
.cursor/rules/: cursor-rules.mdc  general.mdc  python-testing.mdc  python.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yaml
src/pytest_assay/: __init__.py  config.py  logger.py  models.py  plugin.py
src/pytest_assay/evaluators/: README.md  __init__.py  bradleyterry.py  pairwise.py
tests/: README.md  _ollama.py  conftest.py  test_config.py  test_logger.py  test_models.py  test_plugin.py  test_plugin_integration.py
tests/assays/test_plugin_integration/: test_integration_bradleyterryevaluator.json  test_integration_bradleyterryevaluator.readout.json  test_integration_lengthevaluator.json  test_integration_lengthevaluator.readout.json  test_integration_pairwiseevaluator.readout.json
tests/evaluators/: conftest.py  test_bradleyterry.py  test_pairwise.py
tests/pytest_assay/test_plugin_integration/: test_integration_bradleyterryevaluator.readout.json  test_integration_pairwiseevaluator.json
